# unihack21-backend

./: README.md  controller.env  docker-compose.yml  unihack.postman_collection.json
controller/: Dockerfile  Makefile  go.mod  go.sum  io_params801168919.json  main.go
controller/cmd/: main.go
controller/letsencrypt/live/api.kvoli.com/: SSLUser.json
mleval/: Dockerfile  dockercommands  main.py  pyproject.toml
nginx-proxy/: Dockerfile
