[tool.poetry]
name = "mleval"
version = "0.1.0"
description = ""
authors = ["isubasinghe <isubasinghe@student.unimelb.edu.au>"]

[tool.poetry.dependencies]
python = "^3.8"
ludwig = "^0.3.3"
sanic = "^20.12.2"
pandas = "<1.15"
psutil = "^5.8.0"
Sanic-Cors = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
